--- a/app/src/main/res/layout/activity_standalone.xml
+++ b/app/src/main/res/layout/activity_standalone.xml
@@ -3,25 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/btnStandalone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="STAND ALONE SUB MENU"
-        app:layout_constraintStart_toStartOf="@+id/btnPlaySingle"
-        app:layout_constraintTop_toBottomOf="@+id/btnPlaySingle" />
-
-    <Button
-        android:id="@+id/btnPlaySingle"
+        android:id="@+id/btnPlayVideo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="PLAY A SINGLE VIDEO"
+        android:text="Play Video"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnPlaylist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Play Playlist"
+        app:layout_constraintStart_toStartOf="@+id/btnPlayVideo"
+        app:layout_constraintTop_toBottomOf="@+id/btnPlayVideo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
